# kommandozeile

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: checks.yml
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
