[package]
name = "kommandozeile"
version = "0.1.0"
edition = "2018"
rust-version = "1.54.0"
description = "Collection of gimmicks to use when writing a CLI application"
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://gh.knutwalker.io/kommandozeile"
repository = "https://github.com/knutwalker/kommandozeile/"
categories = ["development-tools", "command-line-interface"]
keywords = ["cli", "clap", "tracing"]
resolver = "2"


[features]
default = ["full"]
full = [
    "args_glob_expand",
    "args_file",

    "clap_app_color",
    "clap_color",
    "clap_derive",
    "clap_file",
    "clap_verbose",

    "setup_clap",
    "setup_color-eyre",
    "setup_tracing",
]

# Provides glob expand as args preprocessing
args_glob_expand = ["wild"]
# Provides loading args from files as args preproessing
args_file = ["argfile"]

# Provides a method to intialise clap with a color choice
clap_app_color = ["clap/color", "concolor/auto"]
clap_app_colour = ["clap_app_color"]
# Provides a color flag for clap
clap_color = ["clap", "concolor/api_unstable"]
clap_colour = ["clap_color"]
# Adds the derive feature to clap
clap_derive = ["clap/derive"]
# Provides InputFile and OutputFile types
clap_file = ["clap", "filepath", "same-file"]
# Provides --verbose and --quiet flags
clap_verbose = ["clap"]

# Provides additional clap extras
setup_clap = ["clap"]
# Provides color-eyre setup
setup_color-eyre = ["color-eyre"]
# Provides tracing install hook
setup_tracing = ["tracing", "tracing-error", "tracing-subscriber"]


[dependencies.argfile]
optional = true
version = "0.1.5"

[dependencies.clap]
optional = true
version = "4.2.4"
default-features = false
features = ["std", "error-context", "help", "suggestions", "usage"]

[dependencies.color-eyre]
optional = true
version = "0.6.2"
features = ["issue-url"]

[dependencies.concolor]
optional = true
version = "0.0.8"
default-features = false

[dependencies.filepath]
optional = true
version = "0.1.2"

[dependencies.same-file]
optional = true
version = "1.0.6"

[dependencies.tracing]
optional = true
version = "0.1.37"

[dependencies.tracing-error]
optional = true
version = "0.2.0"

[dependencies.tracing-subscriber]
optional = true
version = "0.3.16"
features = ["env-filter"]

[dependencies.wild]
optional = true
version = "2.1.0"
