[package]
name = "kommandozeile"
version = "0.1.1"
edition = "2018"
rust-version = "1.70.0"
description = "Collection of gimmicks to use when writing a CLI application"
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://gh.knutwalker.io/kommandozeile"
repository = "https://github.com/knutwalker/kommandozeile/"
categories = ["development-tools", "command-line-interface"]
keywords = ["cli", "clap", "tracing"]
resolver = "2"
readme = "README.md"
publish = true

[features]
default = ["full"]
full = [
    "args_glob_expand",
    "args_file",

    "clap_app_color",
    "clap_color",
    "clap_derive",
    "clap_file",
    "clap_verbose",

    "setup_clap",
    "setup_color-eyre",
    "setup_tracing",

    "tracing_attributes",
]

# Provides glob expand as args preprocessing
args_glob_expand = ["wild"]
# Provides loading args from files as args preproessing
args_file = ["argfile"]

# Provides a method to intialise clap with a color choice
clap_app_color = ["clap/color", "concolor/auto"]
clap_app_colour = ["clap_app_color"]
# Provides a color flag for clap
clap_color = ["clap", "concolor/api"]
clap_colour = ["clap_color"]
# Adds the derive feature to clap
clap_derive = ["clap/derive"]
# Provides InputFile and OutputFile types
clap_file = ["clap", "filepath", "same-file"]
# Provides --verbose and --quiet flags
clap_verbose = ["clap"]

# Provides additional clap extras
setup_clap = ["clap"]
# Provides color-eyre setup
setup_color-eyre = ["color-eyre"]
# Provides tracing install hook
setup_tracing = ["tracing", "tracing-error", "tracing-subscriber"]

# Include the attributes feature for tracing
tracing_attributes = ["tracing/attributes"]


[dependencies.argfile]
optional = true
version = "0.1.6"

[dependencies.clap]
optional = true
version = "4.5.7"
default-features = false
features = ["std", "error-context", "help", "suggestions", "usage"]

[dependencies.color-eyre]
optional = true
version = "0.6.3"
features = ["issue-url"]

[dependencies.concolor]
optional = true
version = "0.1.1"
default-features = false

[dependencies.filepath]
optional = true
version = "0.1.2"

[dependencies.same-file]
optional = true
version = "1.0.6"

[dependencies.tracing]
optional = true
default-features = false
features = ["std"]
version = "0.1.40"

[dependencies.tracing-error]
optional = true
version = "0.2.0"

[dependencies.tracing-subscriber]
optional = true
version = "0.3.18"
features = ["env-filter"]

[dependencies.wild]
optional = true
version = "2.1.1"

[lints.rust]
bad_style = "warn"
dead_code = "warn"
improper_ctypes = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
no_mangle_generic_items = "warn"
non_shorthand_field_patterns = "warn"
overflowing_literals = "warn"
path_statements = "warn"
patterns_in_fns_without_body = "warn"
private_bounds = "warn"
private_interfaces = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unconditional_recursion = "warn"
unsafe_code = "warn"
unused = { level = "warn", priority = -1 }
unused_allocation = "warn"
unused_comparisons = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_parens = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = "warn"
cargo = "warn"
missing_const_for_fn = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
